# bowtie_game_engine

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
engine/: Cargo.toml  build.rs
engine/shaders/fragment/: main.glsl
engine/shaders/vertex/: main.glsl
engine/src/: lib.rs
engine/src/bowtie/: component.rs  controller.rs  entity.rs  mod.rs
engine/src/components/: collide.rs  gravity.rs  keyboard_move.rs  mod.rs
engine/src/general/: color.rs  direction.rs  mod.rs  value.rs
engine/src/gl_utils/: element_array_buffer.rs  gl_texture.rs  gl_texture_loader.rs  gl_translation.rs  mod.rs  shader_creator.rs  vertex_array_buffer.rs  vertex_array_object_handler.rs
engine/src/math/: general.rs  matrix.rs  mod.rs  statistics.rs  trig.rs
engine/src/rendering/: drawer.rs
engine/src/shapes/: hollow_rectangle.rs  mod.rs  rectangle.rs
engine/src/sprites/: drawable.rs  mod.rs  sprite.rs
engine/src/window/: window.rs
example_game/: Cargo.toml
example_game/src/: main.rs
examples/playground/: Cargo.toml
examples/pong_game/: Cargo.toml
shaders/: fragment.glsl
shaders/fragment/: main.glsl
shaders/vertex/: main.glsl
src/: main.rs
src/bowtie/: bowtie.rs  entity.rs  mod.rs
src/components/: collide.rs  event.rs  gravity.rs
src/entity_component_system/: entity_component_system.rs  mod.rs
src/game_objects/: floor.rs  game_world.rs  mod.rs  playable_character.rs
src/general/: color.rs  direction.rs
src/gl_utils/: element_array_buffer.rs  error_reader.rs  gl_error_reader.rs  gl_texture.rs  gl_texture_loader.rs  gl_translation.rs  mod.rs  (+4 more)
(+21 files in other folders)
