[package]
name = "bowtie"
version = "0.2.1"
edition = "2021"
readme = "../README.md"
description = "2D Game engine with messaging system"
license = "MIT"
homepage = "https://github.com/devceline/bowtie_game_engine"
repository = "https://github.com/devceline/bowtie_game_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
png = "0.14.0"
futures = "0.3"
