[package]
name = "bowtie"
version = "0.2.2"
edition = "2021"
readme = "../README.md"
description = "2D Game engine with messaging system"
license = "MIT"
homepage = "https://github.com/devceline/bowtie_game_engine"
repository = "https://github.com/devceline/bowtie_game_engine"

[dependencies]
gl = "0.14.0"
glfw = "0.45.0"
png = "0.14.0"
futures = "0.3"
rand = "0.8.5"
